--- a/Frontend/views/dashboard.html
+++ b/Frontend/views/dashboard.html
@@ -42,8 +42,14 @@
         class="text-secondary hover:text-primary transition font-medium">Gestionar Proveedores</a>
     <a href="#" onclick="showNroCompra()"
         class="text-secondary hover:text-primary transition font-medium">Gestionar Números de Compra</a>
+    <a href="#" onclick="showDetalleCompra()"
+        class="text-secondary hover:text-primary transition font-medium">Gestionar Detalle de Compra</a> <!-- Nueva opción -->
+    <a href="#" onclick="showProductos()"
+        class="text-secondary hover:text-primary transition font-medium">Gestionar Productos</a> <!-- Nueva opción para productos -->
     <a class="logout-link text-secondary hover:text-error transition font-medium">Cerrar sesión</a>
 </div>
+
+            
 
         </div>
     </nav>
